--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<title>Cookwithme</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="CSS/style.css" href="CSS/style.css">
-	<link rel="stylesheet" href="CSS/style.css">
+	<link rel="stylesheet" type="css/style.css" href="css/style.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 	<div class="banner">
